[project]
name = "surgeon"
description = "A C/C++ source generation package."
version = "0.1.0"
requires-python = ">=3.11.0"
authors = [{ name = "Omer Lubin", email = "omer.lubin.1337@gmail.com" }]

[project.optional-dependencies]
dev = ["pre-commit", "black", "ruff", "mypy", "pytest", "pytest-mock"]

[tool.mypy]
strict = true
pretty = true
exclude = ["build"]

[tool.ruff]
select = ["ALL"]
ignore = ["A003", "ANN101", "ANN102", "D", "EM", "FBT003", "PT004", "TRY003"]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101"]
"mock_*.py" = ["S101"]
