[tool.poetry]
name = "cxx"
version = "0.0.0-dev"
readme = "readme.md"
description = "A C/C++ source generation package."
authors = ["Omer Lubin <omer.lubin.1337@gmail.com>"]

[tool.poetry.urls]
download = "https://pypi.org/project/cxx/#files"
source = "https://github.com/omer54463/cxx"
tracker = "https://github.com/omer54463/cxx/issues"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
ruff = "^0.0.291"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[tool.mypy]
strict = true
pretty = true
exclude = ["venv", "build"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "A002",
    "A003",
    "ANN101",
    "ANN102",
    "D",
    "EM",
    "FA102",
    "FBT",
    "PERF401",
    "PLR0913",
    "PT004",
    "S602",
    "S603",
    "TRY003",
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["S101"]
"mock_*.py" = ["S101"]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
